<resources>
    <string name="app_name">Mahya</string>
    <string name="dress_to_impress">Dress to impress</string>
    <string name="comodda">COMODDA</string>
    <string name="dresstoimpress">Dress to impress</string>
    <string name="design_by_mahy">Design by mahy</string>
    <string name="comood">Comood</string>
    <string name="gender">Gender</string>
    <string name="location">LOCATION</string>
    <string name="on_the_way">On the way</string>
    <string name="excursion">Excursion</string>
    <string name="telemeter">Telemeter</string>
    <string name="car">Car</string>
    <string name="airplain">Airplain</string>
    <string name="aplain">Aplain</string>
    <string name="plain">Plain</string>
    <string name="bus">Bus</string>
    <string name="vespa">Vespa</string>
    <string name="travel_easily_by_our_luxurious_car">Luxurious car</string>
    <string name="airline">Airline</string>
    <string name="bustransportation">BusTransportation</string>
    <string name="bellavespa">BellaVespa</string>
    <string name="fly_in_sky">Fly in the Sky with less price in the world</string>
    <string name="transport_to_every_where_easily">Transport to every where easily</string>
    <string name="e_uno_bella_rosso_vespa">E uno bella rosso vespa</string>
    <string name="city">Near City</string>
    <string name="send_location">send location</string>
    <string name="friends">Friends</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
</resources>