<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="#70BBBBBB">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/custom_rectangle"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
<androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:src="@drawable/ic_back"
    android:padding="16dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/guideline_start"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_city"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>

    <TextView
        android:id="@+id/LOCATION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@id/city"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/LOCATION"
                app:layout_constraintStart_toEndOf="@id/guideline_start"
                app:layout_constraintEnd_toStartOf="@id/guideline_end"
                app:layout_constraintBottom_toTopOf="@+id/guideline_card"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_the_way"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/excursion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excursion"
                android:textColor="@color/ggg"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/way"
                app:layout_constraintTop_toBottomOf="@+id/way" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_location"
                android:padding="20dp"
                app:layout_constraintBottom_toTopOf="@+id/telemeter"
                app:layout_constraintEnd_toEndOf="@+id/telemeter"
                app:layout_constraintStart_toStartOf="@+id/telemeter"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/telemeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telemeter"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/guideline_card"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_view_bus"
            app:layout_constraintStart_toStartOf="@+id/card_view_bus"
            app:layout_constraintTop_toBottomOf="@+id/card_view_bus"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_bus"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="12dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_view_vespa"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_car">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="107dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_bus"
                android:padding="16dp" />


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plain"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/card_view_vespa"
            app:layout_constraintEnd_toEndOf="@+id/card_view_plain"
            app:layout_constraintStart_toStartOf="@+id/card_view_plain"
            app:layout_constraintTop_toBottomOf="@+id/card_view_plain"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_plain"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="12dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_view_car"
            app:layout_constraintTop_toTopOf="@+id/card_view_car">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="107dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_plain"
                android:padding="16dp" />



        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/card_view_bus"
            app:layout_constraintEnd_toEndOf="@+id/card_view_car"
            app:layout_constraintStart_toStartOf="@+id/card_view_car"
            app:layout_constraintTop_toBottomOf="@+id/card_view_car"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_car"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:elevation="12dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/card_view_plain"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.118">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="107dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_car" />


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vespa"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_view_vespa"
            app:layout_constraintStart_toStartOf="@+id/card_view_vespa"
            app:layout_constraintTop_toBottomOf="@+id/card_view_vespa"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_vespa"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_marginTop="156dp"
            android:clickable="true"
            android:elevation="12dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_view_bus"
            app:layout_constraintTop_toBottomOf="@+id/card_view_plain">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="107dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_vespa"
                android:padding="16dp" />



        </com.google.android.material.card.MaterialCardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />





</androidx.constraintlayout.widget.ConstraintLayout>